--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-date-picker": "^10.0.3",
-    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
