--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dateformat": "^5.0.3",
+    "html-entities": "^2.3.5",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-date-picker": "^10.0.3",
